tests/snapshots/blockflow/is_block_in_main_chain/bad_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - blockflow
    - is-block-in-main-chain
    - foo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Invalid value for: query parameter blockHash (Invalid hex string: foo: foo)
