tests/snapshots/blockflow/is_block_in_main_chain/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - blockflow
    - is-block-in-main-chain
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <BLOCK_HASH>

Usage: kermit blockflow is-block-in-main-chain <BLOCK_HASH>

For more information, try '--help'.
